--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -40,6 +40,7 @@ nav a {
     flex-direction: column;
     max-width: 600px;
     margin: auto;
+    padding: 40px 0px 50px 0px;
 }
 
 /* HOMEPAGE */
